--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
         "laravel/ui": "^3.0",
         "livewire/livewire": "^2.5",
         "realrashid/sweet-alert": "^7.0",
-        "spatie/laravel-permission": "^5.5"
+        "spatie/laravel-permission": "^5.5",
+        "yajra/laravel-datatables-oracle": "^10.4"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
